# insper-embarcados-lab-gpio-pre-rafaelagnelo

./: .gitignore  CMakeLists.txt  README.md  test.py
.github/workflows/: testing.yml
exe1/: CMakeLists.txt  diagram.json  main.c  test.yaml  wokwi.toml
exe2/: CMakeLists.txt  diagram.json  main.c  test.yaml  wokwi.toml
exe3/: CMakeLists.txt  diagram.json  main.c  test.yaml  wokwi.toml
exe4/: CMakeLists.txt  diagram.json  main.c  test.yaml  wokwi.toml
